sumo/tests/sumo/extended/rerouter/errors/xml/destprob_missing_element_end/errors.sumo
Error: Expected end of tag 'interval'
 In file 'input_definition.def.xml'
 At line/column 7/3.

Quitting (on error).
